# Bootcamp-python

./: notes.ipynb
aula01/: kpy.py
aula02/: exercicios.py
aula03/: exercicios_aula03.py
aula04/: desafio.py  exemplo.csv  exercicio_arquivos.py  exercicios_aula04.py
aula05_1BRC/: README.md  pyproject.toml  using_duckdb_to_save_parquet.py
aula05_1BRC/dashboard/: dashboard_certo.py  dashboard_errado.py
aula05_1BRC/data/: measurements_summary.parquet
aula05_1BRC/src/: pandas_compare.py  using_pandas.py  using_polars.py
aula07/: desafio.py  desafio2.py  desafio_com_type_hint.py  etl.py  main.py  sales.csv
aula08/: etl.py
aula08/data/: data.parquet
aula09/: etl.py  exemplo_erros_log.py  exemplo_log.py  exemplo_log2.py  exemplo_log3.py  pipeline.py  utils_log.py
aula10/: csv_test_class.py
aula10/encapsulamento/: conexao.py
aula11/src/data/csv_files/: 1.csv  2.csv
aula11/src/data/json_files/: 1.json  2.json
aula11/src/lib/classes/: AbstractDataSource.py  CsvSource.py  FilesSources.py  JsonSource.py  TxtSource.py
aula15/Collector/datasource/: api.py
aula16/: pyproject.toml
aula16/exercicio/: main.py  read_ops.py  read_ops2.py
aula17/: desafio.py  desafio_query.py  exemplo01.py  meubanco.db  pyproject.toml
aula18/: exemplo01.py  exemplo02json.py  pyproject.toml
aula18/src/: controller.py  models.py  pokemon.db  schema.py
aula19/: Dockerfile  database.py  exemplo_API.py  main.py  pyproject.toml  schema.py  test.db
aula20/: docker-compose.yml  pyproject.toml
aula20/backend/: crud.py  database.py  models.py  router.py  schema.py
