[tool.poetry]
name = "one-billion-row-challenge-python"
version = "0.1.0"
description = ""
authors = ["Daniel Ribeiro <danizilla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
polars = "0.20.3"
duckdb = "0.10.0"
modin = {extras = ["dask"], version = "^0.27.0"}
dask = {extras = ["complete"], version = "^2024.2.0"}
dask-expr = "^0.4.2"
tqdm = "^4.66.2"
tdqm = "^0.0.1"
streamlit = "^1.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
