[tool.poetry]
name = "aula18"
version = "0.1.0"
description = ""
authors = ["Daniel Ribeiro <danizilla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.10.3"
db = "^0.1.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
